--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,6 +131,7 @@ text-decoration: none;
 padding: 0.25rem 1rem;
 text-align: center;
 font-family: 'Nunito', sans-serif ;
+display: inline;
 }
 
 a:visited , a:focus , a:active, a:link{
@@ -143,17 +144,6 @@ border-radius: 20px;
 color: var(--softAquamarine);
 }
 
-/* PERFIL */
-
-.main-profile{
-    height: 350px;
-}
-
-label{
-    display: block;
-    margin: auto;
-}
-
 .profileTitle{
     font-weight: bold;
     text-align: left;
@@ -163,7 +153,7 @@ label{
 
 .profileFoto{
     border-radius: 50%;
-    margin-right: 50%;
+    margin-right: 40%;
     margin-left: 40%;
     width: 100px;
     height: 100px;
@@ -174,6 +164,7 @@ label{
     font-size: 24px;
     margin-bottom: 10px;
     margin: auto;
+    padding: 15px;
 }
 
 .btnEditar{
@@ -188,10 +179,9 @@ label{
 }
 
 form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    line-height: 1;
+   display: flex;
+   justify-content: center;
+   text-align: center;      
 }
 
 .form-control{
@@ -203,14 +193,13 @@ form{
 }
 
 .enviarProfile{
-    width: max-content;
+    width: 80%;
     color: var(--white);
     display:flex;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 15%;
-    padding-right: 15%;
-    margin: auto;
+    padding-right: 15%;    
     background-color: var(--black);
     border-radius: 20px;
     margin-bottom: 3rem;
@@ -219,7 +208,7 @@ form{
 #formularioPerfil {
     width: 450px;
     margin: auto;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 .card-img-overlay{
@@ -319,8 +308,7 @@ form{
     box-sizing: border-box;
     border-radius: 8px;
     margin: 8px 10px 8px 10px;
-    text-align: center;
-    align-items: center;
+    text-align: center;    
 }
 
 .textPerso {
@@ -413,4 +401,33 @@ form{
     justify-content: space-around;
 }
 
+#containerChat{
+    display: inline-flex;
+    justify-content: space-between;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 14px;
+    font-family:'Nunito', sans-serif;
+}
 
+.div1{
+    display: inline;
+    
+}
+
+.div2{
+    display: flex;
+    justify-content: space-between;
+}
+
+.headerme{
+    width: 100%;
+    height: 15%;
+    display: inline-block;
+    text-align: center;
+}
+
+.emptyChat-mensaje{
+    padding: 40px;
+}
